--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ h1 {
     width: 200px;
     height: 200px;
     object-fit: cover;
-    border: 4px solid #3882F6;
+    border: 1px solid black;
     border-radius: 15px;
     margin: 5px 20px 0px 20px;
 }
